--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.0.16",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "twig": "~0.10.3"
   }
 }
