--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "twig": "~0.10.3"
+  },
+  "engines":{
+    "node": "^8.11.1",
+    "npm": "^5.6.0"
   }
 }
